# Calendar

./: CMakeLists.txt  Dockerfile  README.md  read.md  start.sh
resources/: mainwindow.ui
src/: calendardata.cpp  calendardata.h  main.cpp  mainwindow.cpp  mainwindow.h
